[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/settings.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/font_42.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/title_screen.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0235294, 0.0235294, 0.0588235, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 235.0
margin_bottom = 695.0
size_flags_horizontal = 0
custom_constants/separation = 50
alignment = 1

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 246.0
margin_right = 210.0
margin_bottom = 310.0
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.572549, 0.572549, 0.572549, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Start Game"
align = 0

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 210.0
margin_bottom = 424.0
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.572549, 0.572549, 0.572549, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Settings"
align = 0

[node name="AddPicturesButton" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 417.0
margin_right = 393.0
margin_bottom = 481.0
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.572549, 0.572549, 0.572549, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Add Custom Pictures"
align = 0

[node name="Settings" parent="." instance=ExtResource( 1 )]

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -264.0
margin_right = 264.0
margin_bottom = 264.0
window_title = "Open File(s)"
mode = 1
access = 2
filters = PoolStringArray( "*.png ; PNG Images", "*.jpg ; JPG Images" )
current_dir = "/Users"
current_path = "/Users/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddPicturesButton" to="." method="_on_AddPicturesButton_pressed"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
